--- a/config/test/1.conf
+++ b/config/test/1.conf
@@ -1,5 +1,5 @@
 server {
-    listen 127.0.0.1:1234
+    listen :1234
     server_name www.ilRECh.rs
     error_page 404 config/error_pages/404.html
     client_body_size 1000000
