--- a/config/test/6.conf
+++ b/config/test/6.conf
@@ -1,9 +1,8 @@
 server {
-    listen 127.0.0.1:1234
+    listen :1234
     server_name www.ilRECh.rs
     error_page 404 config/error_pages/404.html
     client_body_size 1000000
     location / {
         root config/web_pages
     }
-}
