Filling test configs with useful comments

--- a/config/test/1_ok.conf
+++ b/config/test/1_ok.conf
@@ -1,3 +1,5 @@
+# ':' does not disturb parsing
+
 server {
     listen :1234
     server_name www.ilRECh.rs
@@ -6,3 +8,4 @@ server {
     location / {
         root config/web_pages
     }
+}
