--- a/config/test/8_nok.conf
+++ b/config/test/8_nok.conf
@@ -1,7 +1,8 @@
 server {
-    listen :1234
+    listen 1234
     server_name www.ilRECh.rs
-    error_page 404 config/error_pages/404.html
+    # inaccessible file
+    error_page 404 config/error_pages/asdfasdfasdf.html
     client_body_size 1000000
     location / {
         root config/web_pages
