--- a/config/test/10_nok.conf
+++ b/config/test/10_nok.conf
@@ -1,8 +1,10 @@
-    listen :1234
+server {
+    listen 1234
     server_name www.ilRECh.rs
-    error_page 404 config/error_pages/404.html
     client_body_size 1000000
-    location / {
+
+    # no URL has bee specified
+    location {
         root config/web_pages
     }
 }
