--- a/config/test/9_nok.conf
+++ b/config/test/9_nok.conf
@@ -1,9 +1,9 @@
 server {
     listen 1234
     server_name www.ilRECh.rs
-    error_page 404 config/error_pages/404.html
     client_body_size 1000000
+
+    # there must be at least one parameter
     location / {
-        root config/web_pages
     }
 }
