Working on parsing Location block

--- a/config/test/4_ok.conf
+++ b/config/test/4_ok.conf
@@ -1,6 +1,6 @@
 #duplicating parameters are omitted
 
 server {
-    listen 127.0.0.1:asdf
-    listen 127.0.0.1:asdf
+    listen 127.0.0.1:8888
+    listen 127.0.0.1:7777
 }
