Added some tests Working on Dispatcher: Getting Servers from ConfigFile Dispatching Servers

--- a/config/test/10_ok.conf
+++ b/config/test/10_ok.conf
@@ -3,7 +3,7 @@ server {
     server_name www.ilRECh.rs
     client_body_size 1000000
 
-    # no URL has bee specified
+    # no URL has bee specified, so location won't be parsed correctly
     location {
         root config/web_pages
     }
