--- a/config/test/8_ok.conf
+++ b/config/test/8_ok.conf
@@ -1,7 +1,7 @@
 server {
     listen 1234
     server_name www.ilRECh.rs
-    # inaccessible file
+    # inaccessible file, there won't be error_page value after parsing
     error_page 404 config/error_pages/asdfasdfasdf.html
     client_body_size 1000000
     location / {
