Trying to match nginx behavior

--- a/config/test/bad/8.conf
+++ b/config/test/bad/8.conf
@@ -5,11 +5,11 @@
 
 server {
     listen localhost:8888
-    server_name www.ilRECh.com
+    server_name 
 }
 
 # this one should be dropped
 server {
     listen localhost:8888
-    server_name www.ilRECh.com
+    server_name 
 }
