--- a/config/test/bad/10.conf
+++ b/config/test/bad/10.conf
@@ -5,11 +5,9 @@
 
 server {
     listen localhost:8888
-    server_name www.ilRECh.com
 }
 
 # this one should be dropped
 server {
-    listen localhost:8888
-    server_name www.ilRECh.com
+    listen 127.0.0.1:8888
 }
